test/good/arrays/empty01.px

a: [Bool]
print a, a.empty

a = [true]
print a
