test/bad/generators/type02.px

a: Bool...
b: [Bool] = a
